# plume

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  README.md  Roadmap.md  Spectrum.sln  TODO.md  VulkanToolkit.sln  checkout_and_build_deps.sh  plume.sln  spectrum.sln
Spectrum/: Spectrum.vcxproj
VulkanToolkit/: VulkanToolkit.vcxproj
assets/shaders/: compile.bat  compile_shaders.py  frag.spv  node_base.frag  node_base.vert  pbr.frag  pbr.vert  raymarch.frag  raymarch.vert  raymarch_frag.spv  raymarch_vert.spv  sdf.frag  sdf.vert  shader.frag  shader.tesc  shader.tese  shader.vert  shader_frag.spv  shader_tesc.spv  shader_tese.spv  shader_vert.spv  vert.spv
assets/textures/: pisa_diffuse.hdr  techgate_diffuse.hdr
include/: App.h  Application.h  Buffer.h  CommandBuffer.h  CommandPool.h  DescriptorPool.h  Device.h  DeviceMemory.h  Framebuffer.h  Geometry.h  Image.h  Instance.h  Noncopyable.h  PhysicalDevice.h  Pipeline.h  Platform.h  RenderPass.h  ResourceManager.h  Semaphore.h  ShaderModule.h  Surface.h  Swapchain.h  Vk.h  Window.h
include/misc/: Application.h  Geometry.h  Log.h  ResourceManager.h
include/node/: NodeBase.h  NodeGraph.h
include/spirv-cross/msvc/: SPIRV-Cross.vcxproj
include/vk/: Buffer.h  Colors.h  CommandBuffer.h  CommandPool.h  DescriptorPool.h  Device.h  DeviceMemory.h  Framebuffer.h  Image.h  Instance.h  Noncopyable.h  Pipeline.h  Platform.h  RenderPass.h  Sampler.h  Semaphore.h  ShaderModule.h  Surface.h  Swapchain.h  Utils.h  Vk.h  Window.h
include/vk/misc/: Application.h  Geometry.h  ResourceManager.h  Utils.h
include/vk/wrappers/: Buffer.h  CommandBuffer.h  CommandPool.h  DescriptorPool.h  Device.h  DeviceMemory.h  Framebuffer.h  Image.h  Instance.h  Pipeline.h  Platform.h  RenderPass.h  Sampler.h  ShaderModule.h  Swapchain.h  Synchronization.h  Vk.h  Window.h
plume/: plume.vcxproj
spectrum/: spectrum.vcxproj
src/: App.cpp  Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  Device.cpp  DeviceMemory.cpp  Framebuffer.cpp  Geometry.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  ResourceManager.cpp  Semaphore.cpp  ShaderModule.cpp  Surface.cpp  Swapchain.cpp  Window.cpp  main.cpp
src/misc/: Geometry.cpp  ResourceManager.cpp  Utils.cpp
src/node/: NodeBase.cpp  NodeGraph.cpp
src/vk/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  Device.cpp  DeviceMemory.cpp  Framebuffer.cpp  Image.cpp  Instance.cpp  Pipeline.cpp  RenderPass.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp  Surface.cpp  Swapchain.cpp  Window.cpp
src/vk/misc/: Geometry.cpp  ResourceManager.cpp
src/vk/wrappers/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  Device.cpp  DeviceMemory.cpp  Framebuffer.cpp  Image.cpp  Instance.cpp  Pipeline.cpp  Sampler.cpp  ShaderModule.cpp  Swapchain.cpp  Synchronization.cpp  Window.cpp
